<resources>
    <string name="app_name">Qumrax</string>
    <string name="min_accuracy">Min Accuracy</string>
    <string name="object_to_be_detected">object to be detected</string>
    <string name="about">about</string>
    <string name="best_option">It is best in Landscape mode</string>
    <string name="full_screen_mode">Full Screen Mode</string>
    <string name="permission_not_granted">Permissions not granted by the user.</string>
    <string name="grant_permission">Grant Permission</string>
</resources>