<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.camera.view.PreviewView
        android:id="@+id/viewx"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </androidx.camera.view.PreviewView>

    <xyz.abdalrahman.qumrax2.MapOutResults
        android:id="@+id/mapOut"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/noPermission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="376dp"
            android:layout_height="134dp"
            android:text="@string/permission_not_granted"
            android:textColor="#FFFFFF"
            android:textSize="36sp" />

        <Button
            android:id="@+id/grant_permission_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/grant_permission" />
    </LinearLayout>

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full_screen_mode"
        android:textAlignment="center"
        android:translationX="-40dp"
        android:translationY="-40dp"
        app:layout_constraintBottom_toTopOf="@+id/sittings"
        app:layout_constraintEnd_toEndOf="@+id/viewx" />

    <LinearLayout
        android:id="@+id/sittings"
        android:layout_width="match_parent"
        android:layout_height="152dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="10dp">

        <TextView
            android:id="@+id/min_accu_lbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/min_accuracy"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <SeekBar
            android:id="@+id/min_accu_scroll"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:max="100"
            android:progress="45"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/object_to_be_detected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/object_to_be_detected"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <SeekBar
            android:id="@+id/object_to_be_detected_scroll"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:max="8"
            android:progress="8"
            app:layout_constraintBottom_toBottomOf="parent" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>